# TorcEngine

./: .gitignore  CMakeLists.txt  GenerateSolution.bat  LICENSE  README.md  dependencies.json  engine.json  generate_win64_solution.bat
Engine/Runtime/: CMakeLists.txt
Engine/Runtime/Asset/: Asset.cpp  Asset.h  CMakeLists.txt  Mesh.cpp  Model.cpp  Model.h  Node.cpp  te_asset_files.cmake
Engine/Runtime/Core/: Application.cpp  Application.h  Base.h  CMakeLists.txt  te_core_files.cmake
Engine/Runtime/Core/Common/: Utils.cpp
Engine/Runtime/Core/Common/Math/: MathUtils.h
Engine/Runtime/Core/Component/: Component.cpp  Component.h  ECManager.cpp  ECRegistry.h  Entity.cpp  Entity.h
Engine/Runtime/Core/Environment/: Environment.h  Environment.inl  EnvironmentVariable.h
Engine/Runtime/Core/IO/: FileIOBase.cpp  FileStream.cpp  FileStream.h
Engine/Runtime/Core/IO/Path/: Path.cpp  Path.h
Engine/Runtime/Core/Input/: BaseInput.cpp  BaseInput.h  Gamepad.cpp  Gamepad.h  Keyboard.cpp  Mouse.cpp  PlatformInput.h
Engine/Runtime/Core/JobSystem/: GenericTaskQueue.cpp  GenericTaskQueue.h
Engine/Runtime/Core/Logging/: DebugWindowLogger.cpp  DebugWindowLogger.h  FileLogger.cpp  Logger.cpp  Logger.h
Engine/Runtime/Core/Math/: Hashing.cpp  Hashing.h  Uuid.cpp  Uuid.h  Vector4.h
Engine/Runtime/Core/Memory/: Memory.cpp  Memory_defs.h
Engine/Runtime/Core/Memory/Allocators/: PoolAllocator.cpp  StackAllocator.h  StackFrameAllocator.cpp
Engine/Runtime/Core/Module/: Module.cpp  Module.h  ModuleManager.cpp  ModuleManager.h  PluginLoader.cpp
Engine/Runtime/Core/Parsers/: JsonReader.h
Engine/Runtime/Core/Platform/: Platform.h  PlatformDefines.h
Engine/Runtime/Core/Platform/Windows/: Platform_Windows.cpp  Window_Windows.cpp  Window_Windows.h  te_platform_windows_files.cmake
Engine/Runtime/Core/Plugins/: Plugin.cpp  PluginLoader.cpp  PluginLoader.h  PluginRegistry.h
Engine/Runtime/Core/Profiling/: SystemTimer.cpp  Timer.cpp
Engine/Runtime/Core/RTTI/: RttiMacros.h  TypeName.h
Engine/Runtime/Core/Singleton/: Singleton.h
Engine/Runtime/Core/Std/Containers/: circular_queue.h  queue.h  sparse_set.h  stack.h
Engine/Runtime/Core/Std/String/: string.h
Engine/Runtime/Core/Std/Threading/: Atomic.h  Mutex.cpp  Mutex.h  Thread.h
Engine/Runtime/Core/System/: ISystem.h
Engine/Runtime/Core/Threading/: Atomic.h  Mutex.cpp  Thread.cpp
Engine/Runtime/Core/TorcSystem/: ISystem.h
Engine/Runtime/Core/Windowing/: WindowBase.cpp  WindowBase.h
Engine/Runtime/GameCore/: CMakeLists.txt  CameraSystem.cpp  CameraSystem.h  te_gamecore_files.cmake
Engine/Runtime/Graphics/: CMakeLists.txt  te_graphics_files.cmake
Engine/Runtime/Graphics/RDI/: CMakeLists.txt
Engine/Runtime/Graphics/RHI/: CMakeLists.txt  rhi_files.cmake
Engine/Runtime/Graphics/RPI/: IGPUResource.cpp  IGPUResource.h  Renderer.cpp  Renderer.h
Engine/Runtime/Launcher/: CMakeLists.txt  Launcher.cpp  te_launcher_files.cmake
TestGame/: CMakeLists.txt  main.cpp  testgame_files.cmake
TorcEngine/Runtime/: BasicTypes.h  CMakeLists.txt  pch.h
TorcEngine/Runtime/Common/: CMakeLists.txt  StringUtils.cpp  StringUtils.h
TorcEngine/Runtime/Core/: Application.cpp  Application.h  CMakeLists.txt  Event.cpp  Event.h  Math.h  SystemTimer.cpp  SystemTimer.h  Timer.cpp  Timer.h
TorcEngine/Runtime/Core/Common/: String.cpp  String.h  StringUtils.cpp  StringUtils.h  UtilMacros.h
TorcEngine/Runtime/Core/Containers/: FreeList.h  GenericTaskQueue.cpp  GenericTaskQueue.h  LockFreeStack.h  NonblockingQueue.h  Queue.h  Stack.h  TwoLockQueue.h
TorcEngine/Runtime/Core/IOStream/: FileStream.cpp  FileStream.h
TorcEngine/Runtime/Core/Input/: BaseInput.cpp  BaseInput.h  Gamepad.cpp  Keyboard.cpp  Mouse.cpp  Mouse.h
TorcEngine/Runtime/Core/JobSystem/: GenericTaskQueue.cpp  GenericTaskQueue.h
TorcEngine/Runtime/Core/Logging/: DebugWindowLogger.cpp  DebugWindowLogger.h  FileLogger.cpp  FileLogger.h  Logger.cpp  Logger.h  LoggerMacros.h
TorcEngine/Runtime/Core/Memory/: Memory.cpp  Memory.h
TorcEngine/Runtime/Core/Plugins/: Plugin.cpp  Plugin.h  PluginLoader.cpp  PluginLoader.h  PluginRegistry.h
TorcEngine/Runtime/Core/Threading/: Atomic.h  Mutex.cpp  Mutex.h  Thread.cpp  Thread.h
TorcEngine/Runtime/Core/TorcSystem/: #ISystem.h#  ISystem.h
TorcEngine/Runtime/Platform/: CMakeLists.txt  Defines.h  FileSystem.cpp  FileSystem.h  Platform.h  SystemInfo.h  WindowBase.cpp  WindowBase.h
TorcEngine/Runtime/Platform/Windows/: PlatformGamepad_XInput.cpp  PlatformInput_Windows64.cpp  PlatformWin64.cpp  Platform_Windows64.cpp  SystemInfoWin64.cpp  SystemInfo_Windows64.cpp  WindowWin64.cpp  WindowWin64.h  Window_Windows64.cpp  Window_Windows64.h
TorcEngine/Runtime/Renderer/: CMakeLists.txt  Camera.cpp  Camera.h  CommandBucket.h  CommandPacket.h  Commands.h  IGPUResource.cpp  IGPUResource.h  Renderer.cpp  Renderer.h
TorcEngine/Runtime/Renderer/GPUObjects/: BlendState.cpp  BlendState.h  Buffer.cpp  Buffer.h  DepthStencilBuffer.cpp  DepthStencilBuffer.h  DepthStencilState.cpp  DepthStencilState.h  InputLayout.cpp  InputLayout.h  PrimitiveTopology.cpp  PrimitiveTopology.h  RasterizerState.cpp  RasterizerState.h  RenderTarget.cpp  RenderTarget.h  SamplerState.cpp  SamplerState.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TransformationBuffer.cpp  TransformationBuffer.h
TorcEngine/Runtime/TorcGfx/: CMakeLists.txt  HandleRegistry.h  ITorcGfxBackend.h  TorcGfxTypes.h
TorcEngine/Runtime/TorcGfx/GfxAPIs/: CMakeLists.txt
TorcEngine/Runtime/UnitTests/: CMakeLists.txt  DummyTest.h  UnitTests.cpp
TorcEngine/Tools/TorcEditor/: App.xaml.cs  CMakeLists.txt  EditorMain.cpp  MainWindow.xaml.cs  TorcEditor - Backup.csproj  TorcEditor.cpp  TorcEditor.csproj  TorcEditor.h  editor.ini
TorcEngine/Tools/TorcEditor/Converters/: ByteToImageConverter.cs  Class1.cs
TorcEngine/Tools/TorcEditor/Panels/: CMakeLists.txt  EditorAssetBrowserPanel.cpp  EditorAssetBrowserPanel.h  EditorLogPanel.cpp  EditorLogPanel.h
TorcEngine/Tools/TorcEditor/ProjectBrowser/: OpenProject.cs  Project.cs
TorcEngine/Tools/TorcEngine.Bridge/: CMakeLists.txt  Test.h
(+491 files in other folders)
